--- a/app/views/static_pages/_parallax_header.html.erb
+++ b/app/views/static_pages/_parallax_header.html.erb
@@ -7,4 +7,4 @@
 		</div>
 	</div>
 </section>
-<%= content_tag :span, nil, class: 'divider' if divider -%>
+<%= content_tag :span, nil, class: 'divider' if divider===true -%>
