--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -23,7 +23,7 @@
 		</div>
 		<% end -%>
 
-		<%= render 'events/upcoming', events: @venue.events, render_footer: false -%>
+		<%= render 'events/upcoming', events: @venue.events, render_footer: 0 -%>
 
 	</aside>
 
