--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -6,7 +6,7 @@
 		<thead>
 			<tr>
 				<th>Title</th>
-				<th>Status</th>
+				<th class="text-center">Front Page</th>
 				<th>Last Updated</th>
 				<th></th>
 			</tr>
@@ -16,7 +16,7 @@
 			<% @pages.each do |page| %>
 			<tr>
 				<td><%= link_to fa_icon('pencil', text: page.title), edit_admin_page_path(page) %></td>
-				<td><%= page.status %></td>
+				<td class="text-center"><%= fa_icon('check-square-o') if page.front_page %></td>
 				<td><%= page.updated_at %></td>
 				<td>
 				<%= link_to fa_icon('eye'), short_page_path(page), class: 'btn btn-xs btn-info' %>
