--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,10 +1,7 @@
-<% @page_header = @page.title if false -%>
+<% @page_header = @page.title if @page.container_layout -%>
 
-<%= raw('<div class="container">') if @page.try(:skip_container) -%>
+<%= raw('<div class="container">') if @page.container_layout -%>
 
 <%= @page.rendered_content %>
 
-<%#= link_to 'Edit', edit_page_path(@page) %>
-<%#= link_to 'Back', pages_path %>
-
-<%= raw('</div> <!-- end .contianer -->') if @page.try(:skip_container) -%>
+<%= raw('</div> <!-- end .contianer -->') if @page.container_layout -%>
