--- a/app/views/layouts/admin/_nav.html.erb
+++ b/app/views/layouts/admin/_nav.html.erb
@@ -28,6 +28,8 @@
 			<%#= content_tag :li, link_to('Ships', '#admin_ships_path') -%>
 			<hr>
 			<%= content_tag :li, link_to('Flights', admin_flights_path) -%>
+			<hr>
+			<%= content_tag :li, link_to('Testimonials', admin_testimonials_path) -%>
 
 		</ul>
 	</div><!-- /.navbar-collapse -->
