--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -39,7 +39,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-7">
 			<h4>Exceptional Service</h4>
 			<p>
 				It is our job, as your casino experts, to offer the most comps and best gaming experience possible to all levels of players. Even those who are first time players will be granted no less than discounted room accommodations.
@@ -54,14 +54,17 @@
 			<p>
 				A world filled with luxuries, fun, and excitement await you. We provide “truly superior personalized services” to those wishing to enjoy gaming holidays at some of the world’s finest gaming resorts.
 			</p>
-		</div>
-		<div class="col-md-4">
-			<div class="well">
 
-				<%= render 'layouts/shortcodes/sign_up' -%>
-
+			<div class="well well-sm text-center">
+				<p><em>Recieve Special Offers</em></p>
+				<%= render 'layouts/shortcodes/sign_up_horiz' -%>
 			</div>
+
+		</div>
+		<div class="col-md-5">
+			<%= render 'layouts/shortcodes/home/testimonials' -%>
 		</div>
 	</div>
+
 </div>
 
