LandEvent datetime format fix

--- a/app/views/layouts/shortcodes/home/_travel.html.erb
+++ b/app/views/layouts/shortcodes/home/_travel.html.erb
@@ -14,7 +14,7 @@
 			<div class="col-sm-6 col-sm-push-6">
 				<h4 class="hidden-xs">&nbsp;</h4>
 				<p>
-					Ask us about Complimentary Airfare, Hotel, and Transfers to the fabulous CAESARS Entertainment & Tropicana Las Vegas gaming resorts!
+					Ask us about Complimentary Airfare, Hotel, and Transfers to the fabulous CAESARS Entertainment gaming resorts!
 				</p>
 				<p>
 					We have reserved seats on hundreds of flights from dozens of cities across the United States and Canada, including one near you. Reservations being accepted for qualified players.
