--- a/app/views/admin/casinos/_form.html.erb
+++ b/app/views/admin/casinos/_form.html.erb
@@ -15,9 +15,21 @@
 	<%= f.label :name %>
 	<%= f.text_field :name, class: 'form-control' %>
 </div>
-<div class="form-group">
-	<%= f.label :slug %>
-	<%= f.text_field :slug, class: 'form-control' %>
+
+
+<div class="row">
+	<div class="col-sm-8">
+		<div class="form-group">
+			<%= f.label :slug %>
+			<%= f.text_field :slug, class: 'form-control' %>
+		</div>
+	</div>
+	<div class="col-sm-4">
+		<div class="form-group">
+			<%= f.label :code %>
+			<%= f.text_field :code, class: 'form-control' %>
+		</div>
+	</div>
 </div>
 
 <div class="form-group">
