init flights belonging to casinos

--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -38,9 +38,9 @@
 
 
 		<div class="panel panel-default">
-			<div class="panel-heading">
+			<header class="panel-heading">
 				<h3 class="panel-title">Flights</h3>
-			</div>
+			</header>
 			<% if @destination.flights.any? -%>
 			<div class="list-group">
 				<% @destination.flights.each do |flight| -%>
