--- a/app/views/admin/flights/_form.html.erb
+++ b/app/views/admin/flights/_form.html.erb
@@ -28,18 +28,13 @@
 <div class="row">
 	<div class="col-sm-7">
 		<div class="form-group">
-			<%= f.label :arriving_airport %>
-			<%= f.text_field :arriving_airport, class: 'form-control' %>
+			<%= f.label :casino_code, "Destination (Casino Code)" %>
+			<%= f.text_field :casino_code, class: 'form-control' %>
 		</div>
 	</div>
 	<div class="col-sm-5">
 		<%= render 'admin/admin/datepicker', f: f, field: :end_string, label: 'Arriving Time', dtp_class: 'end', usec: usec -%>
 	</div>
-</div>
-
-<div class="form-group">
-	<%= f.label :flight_number %>
-	<%= f.text_field :flight_number, class: 'form-control' %>
 </div>
 
 <% if false -%>
