--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -23,10 +23,8 @@
 					<tr>
 						<%= content_tag :th, sort_link(@flights_q, :departing_airport, 'Departing') %>
 						<%= content_tag :th, sort_link(@flights_q, :departing_at) %>
-						<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Destination') %>
-						<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Arriving') %>
+						<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Casino') %>
 						<%= content_tag :th, sort_link(@flights_q, :arriving_at) %>
-						<%#= content_tag :th, sort_link(@flights_q, :flight_number) %>
 					</tr>
 				</thead>
 
@@ -35,10 +33,8 @@
 					<tr>
 						<td><%= airport_popover flight.departing_location %></td>
 						<td><%= flight.departing_at.to_s(:long) %></td>
-						<td><%= link_to flight.destination.name, flight.destination %></td>
-						<td><%= airport_popover flight.arriving_location %></td>
+						<td><%= link_to flight.casino.name, flight.casino %></td>
 						<td><%= flight.arriving_at.to_s(:long) %></td>
-						<%#= content_tag td:, flight.flight_number %>
 					</tr>
 					<% end %>
 				</tbody>
