--- a/app/views/casinos/show.html.erb
+++ b/app/views/casinos/show.html.erb
@@ -32,6 +32,15 @@
 			</div>
 		</div>
 
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h3 class="panel-title">Flights</h3>
+			</header>
+			<div class="list-group">
+				<%= render(@casino.flights) || content_tag(:div, 'No Flights at this Time', class: 'panel-body text-center') -%>
+			</div>
+		</div>
+
 	</div>
 
 </div>
