destinations pagination fix

--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -20,8 +20,8 @@
 			<td><%= link_to destination.name, destination -%></td>
 			<td class="small">
 				<ul class="list-inline">
-					<% destination.casinos.each do |casino| -%>
-					<%= content_tag :li, link_to(casino.name, [destination, casino]) -%>
+					<% destination.casinos.sample(10).each do |casino| -%>
+					<%= content_tag :li, link_to(casino.name, [destination, casino], class: 'label label-info') -%>
 					<% end -%>
 				</ul>
 			</td>
