--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -28,7 +28,7 @@
 			<hr class="visible-xs-block">
 		</div>
 		<div class="col-sm-6 col-md-5">
-			<%= render 'events/upcoming' -%>
+			<%= render 'static_pages/upcoming' -%>
 		</div>
 	</div>
 </div>
