--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -17,11 +17,11 @@
 </div>
 
 <div class="form-group">
-	<%= f.label :venue_id %>
+	<%= f.label :casino_id %>
 	<div class="input-group">
-		<%= f.collection_select :venue_id, Venue.all, :id, :name, {include_blank: 'Select Venue'}, class: 'form-control', id: 'select_venue' -%>
+		<%= f.collection_select :casino_id, Casino.all, :id, :name, {include_blank: 'Select Venue'}, class: 'form-control', id: 'select_venue' -%>
 		<span class="input-group-btn">
-			<%= link_to 'Add Venue', new_admin_venue_path, class: 'btn btn-warning', data: { confirm: 'You are leaving this page. Unsaved changes will be lost.' } -%>
+			<%= link_to 'Add Venue', new_admin_casino_path, class: 'btn btn-warning', data: { confirm: 'You are leaving this page. Unsaved changes will be lost.' } -%>
 		</span>
 	</div>
 </div>
@@ -31,7 +31,6 @@
 	<%= f.text_area :content, class: 'froala_content form-control' %>
 </div>
 
-<% unless @event.type == 'Cruise' -%>
 <% usec = Time.now.usec -%>
 <div class="row">
 	<div class="col-sm-6">
@@ -45,7 +44,6 @@
 		</div>
 	</div>
 </div>
-<% end -%>
 
 <%= render 'admin/admin/nested_accordion', f: f, includes: @nested_includes -%>
 
