--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing <%= @type.titleize -%></h1>
+<h1>Editing Event</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @event %> |
-<%= link_to 'Back', sti_events_path(@event.type) %>
+<%= link_to 'Back', admin_events_path %>
