--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New <%= @type.titleize -%></h1>
+<h1>New Event</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', sti_events_path(@event.type) %>
+<%= link_to 'Back', admin_events_path %>
