--- a/app/views/casinos/show.html.erb
+++ b/app/views/casinos/show.html.erb
@@ -32,6 +32,29 @@
 			</div>
 		</div>
 
+		<% if @casino.events.any? -%>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title text-center">Upcoming Events</h3>
+			</div>
+			<div class="list-group">
+				<% @casino.events.limit(3).each do |event| -%>
+				<%= link_to event, class: 'list-group-item' do -%>
+				<div class="list-group-item-text media">
+					<%= content_tag :i, nil, class: "fa fa-fw fa-calendar fa-2x media-object pull-left" -%>
+					<div class="media-body">
+						<h5 class="media-heading">
+							<%= event.title -%><br>
+							<small><%= event.date_span -%></small>
+						</h5>
+					</div>
+				</div>
+				<% end -%>
+				<% end -%>
+			</div>
+		</div>
+		<% end -%>
+
 		<div class="panel panel-default">
 			<header class="panel-heading">
 				<h3 class="panel-title">Flights</h3>
