--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
 	<aside class="col-sm-4">
 		<% if @event.pictures.any? -%>
 		<figure class="thumbnail">
-			<%= link_to image_tag(@event.pictures.first.image_url), sti_event_pictures_path(@event), data: {toggle: :modal, target: '#defaultModal'} -%>
+			<%= link_to image_tag(@event.pictures.first.image_url), event_pictures_path(@event), data: {toggle: :modal, target: '#defaultModal'} -%>
 		</figure>
 		<% else -%>
 		<!-- default event image -->
@@ -18,7 +18,7 @@
 			<div class="panel-body">
 				<p>
 					<strong>Venue:</strong>
-					<%= link_to @event.venue.name, venue_path(@event.venue) %>
+					<%= link_to @event.casino.name, casino_path(@event.casino) %>
 				</p>
 
 				<p>
@@ -30,10 +30,6 @@
 					<strong>End at:</strong>
 					<%= @event.end_at %>
 				</p>
-
-				<p>
-					<%= link_to fa_icon('asterisk', text: 'Attractions'), venue_attractions_path(@event.venue), class: 'btn btn-default btn-block btn-sm', data: {toggle: :modal, target: '#defaultModal'} %>
-				</p>
 			</div>
 		</div>
 
@@ -41,14 +37,12 @@
 
 	<div class="col-sm-8">
 		<%= @event.rendered_content %>
-
-		<%= render 'ports' if @event.type == 'Cruise' -%>
 	</div>
 
 </div>
 
 <% if is_admin? -%>
 <hr>
-<%= link_to 'Edit', sti_event_path(@event.type, @event, :edit) %> |
-<%= link_to 'Back', sti_event_path(@event.type) %>
+<%= link_to 'Edit', edit_admin_event_path(@event) %> |
+<%= link_to 'Back', events_path %>
 <% end -%>
