--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -23,7 +23,27 @@
 		</div>
 		<% end -%>
 
-		<%= render 'events/upcoming', events: @venue.events, render_footer: 0 -%>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title text-center">Upcoming Cruises</h3>
+			</div>
+			<div class="list-group">
+				<% @venue.cruises.limit(3).each do |cruise| -%>
+				<%= link_to cruise, class: 'list-group-item' do -%>
+				<div class="list-group-item-text media">
+					<%= content_tag :i, nil, class: "fa fa-fw fa-ship fa-2x media-object pull-left" -%>
+					<div class="media-body">
+						<h5 class="media-heading">
+							<%= cruise.title -%><br>
+							<small><%= cruise.date_span -%></small>
+						</h5>
+					</div>
+				</div>
+				<% end -%>
+				<% end -%>
+			</div>
+		</div>
+
 
 	</aside>
 
