cruise/event date limiter fix

--- a/app/views/cruises/index.html.erb
+++ b/app/views/cruises/index.html.erb
@@ -17,7 +17,7 @@
 		</thead>
 
 		<tbody>
-			<% @cruises.each do |cruise| %>
+			<% @cruises.future.each do |cruise| %>
 			<tr>
 				<td><%= link_to cruise.title, cruise %></td>
 				<td><%= cruise.date_span %></td>
