--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
 		</thead>
 
 		<tbody>
-			<% @events.each do |event| %>
+			<% @events.future.each do |event| %>
 			<tr>
 				<td><%= link_to event.title, event %></td>
 				<td><%= event.date_span %></td>
