--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -11,7 +11,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<% @events.reverse_order.each do |event| %>
+			<% @events.reverse.each do |event| %>
 			<tr>
 				<td><%= link_to event.title, edit_admin_event_path(event) -%></td>
 				<td><%= link_to event.casino.try(:name), edit_admin_casino_path(event.casino) -%></td>
