--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -8,6 +8,7 @@
 				<th>Title</th>
 				<th>Venue</th>
 				<th>Dates</th>
+				<th></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -16,6 +17,9 @@
 				<td><%= link_to event.title, edit_admin_event_path(event) -%></td>
 				<td><%= link_to event.casino.try(:name), edit_admin_casino_path(event.casino) -%></td>
 				<td><%= event.date_span -%></td>
+				<td>
+					<%= link_to fa_icon('remove'), [:admin, event], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' -%>
+				</td>
 			</tr>
 			<% end -%>
 		</tbody>
