--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -32,9 +32,9 @@
 					<% @flights.each do |flight| %>
 					<tr>
 						<td><%= airport_popover flight.departing_location %></td>
-						<td><%= flight.departing_at.to_s(:long) %></td>
+						<td><%= flight.departing_at.to_formatted_s(:custom_long_ordinal) %></td>
 						<td><%= link_to flight.casino.name, flight.casino %></td>
-						<td><%= flight.arriving_at.to_s(:long) %></td>
+						<td><%= flight.arriving_at.to_formatted_s(:custom_long_ordinal) %></td>
 					</tr>
 					<% end %>
 				</tbody>
