search by flight casino

--- a/app/views/flights/_flight.html.erb
+++ b/app/views/flights/_flight.html.erb
@@ -1,1 +1,1 @@
-<%= link_to flight_info(flight), flight, class: 'list-group-item' -%>
+<%= content_tag :li, flight_info(flight), class: 'list-group-item' -%>
