reorder search flight dropdowns

--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -6,12 +6,12 @@
 		<%= select_tag 'q[departing_at_eq]', options_for_select(Flight.unique_dates), {include_blank: 'Departing Date', class: 'form-control'} %>
 	</p>
 	<p>
-		<%= select_tag 'q[casino_code_eq]', options_for_select(Flight.available_destination_casinos), {include_blank: 'Destination Casino', class: 'form-control'} -%>
-		<%#= select_tag 'q[destination_name_cont]', options_for_select(Flight.available_destinations), {include_blank: 'Destination', class: 'form-control'} -%>
-	</p>
-	<p>
 		<%= select_tag 'q[departing_airport_eq]', options_for_select(Flight.departing_airports), {include_blank: 'Departing Airport', class: 'form-control'} -%>
 	</p>
+	<p>
+		<%= select_tag 'q[casino_code_eq]', options_for_select(Flight.available_destination_casinos), {include_blank: 'Destination Casino', class: 'form-control'} -%>
+	</p>
+	<%#= select_tag 'q[destination_name_eq]', options_for_select(Flight.available_destinations), {include_blank: 'Destination', class: 'form-control'} -%>
 
 	<button type="submit" class="btn btn-info btn-lg btn-block">Find Flights <%= fa_icon('plane') -%></button>
 
