--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -8,7 +8,7 @@
 		</div>
 
 		<% @attractions.each do |attraction| -%>
-		<%= render 'show', attraction: attraction -%>
+		<%= render attraction -%>
 		<% end -%>
 
 		<div class="modal-footer">
