--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -12,7 +12,7 @@
 		<thead>
 			<tr>
 				<th>Name</th>
-				<th>Type</th>
+				<!-- <th>Type</th> -->
 			</tr>
 		</thead>
 
@@ -20,7 +20,7 @@
 			<% @venues.each do |venue| %>
 			<tr>
 				<td><%= link_to venue.name, venue_path(venue) %></td>
-				<td><%= venue.type %></td>
+				<!-- <td><%#= venue.type %></td> -->
 			</tr>
 			<% end %>
 		</tbody>
