--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -11,7 +11,7 @@
 	<p>
 		<%= select_tag 'q[casino_code_eq]', options_for_select(Flight.available_destination_casinos), {include_blank: 'Destination Casino', class: 'form-control'} -%>
 	</p>
-	<%#= select_tag 'q[destination_name_eq]', options_for_select(Flight.available_destinations), {include_blank: 'Destination', class: 'form-control'} -%>
+	<%#= select_tag 'q[casino_destination_name_eq]', options_for_select(Flight.available_destinations), {include_blank: 'Destination', class: 'form-control'} -%>
 
 	<button type="submit" class="btn btn-info btn-lg btn-block">Find Flights <%= fa_icon('plane') -%></button>
 
