--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,13 @@
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 	<![endif]-->
+
+	<%= yield :head %>
 </head>
 <body>
 
 	<%= render 'layouts/analytics' -%>
-	
+
 	<%= render 'layouts/nav' %>
 
 	<%= yield :pre_container -%>
