--- a/app/views/casinos/index.html.erb
+++ b/app/views/casinos/index.html.erb
@@ -7,43 +7,49 @@
 </div>
 
 
-<div>
+<div class="row">
 
-	<!-- Nav tabs -->
-	<ul class="nav nav-tabs nav-justified" role="tablist">
-		<li class="active"><a href="#map" aria-controls="map" role="tab" data-toggle="tab">Map</a></li>
-		<li><a href="#list" aria-controls="list" role="tab" data-toggle="tab">List</a></li>
-	</ul>
+	<div class="col-sm-12">
 
-	<!-- Tab panes -->
-	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane active" id="map">
-			<div class="thumbnail">
-				<div class="embed-responsive embed-responsive-map">
-					<%= content_tag :iframe, nil, src: maps_casinos_path, class: 'embed-responsive-item' %>
+		<div class="thumbnail">
+
+			<!-- Nav tabs -->
+			<ul class="nav nav-tabs nav-justified" role="tablist">
+				<li class="active"><a href="#map" aria-controls="map" role="tab" data-toggle="tab">Map</a></li>
+				<li><a href="#list" aria-controls="list" role="tab" data-toggle="tab">List</a></li>
+			</ul>
+
+			<!-- Tab panes -->
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="map">
+
+					<div class="embed-responsive embed-responsive-map">
+						<%= content_tag :iframe, nil, src: maps_casinos_path, class: 'embed-responsive-item' %>
+					</div>
+
+				</div>
+				<div role="tabpanel" class="tab-pane" id="list">
+
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Address</th>
+								<th>Destination</th>
+							</tr>
+						</thead>
+
+						<tbody>
+							<%= render @casinos %>
+						</tbody>
+					</table>
+
+					<div class="pagination-container text-center">
+						<%= paginate @casinos %>
+					</div>
+
 				</div>
 			</div>
-		</div>
-		<div role="tabpanel" class="tab-pane" id="list">
-
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Name</th>
-						<th>Address</th>
-						<th>Destination</th>
-					</tr>
-				</thead>
-
-				<tbody>
-					<%= render @casinos %>
-				</tbody>
-			</table>
-
-			<div class="pagination-container text-center">
-				<%= paginate @casinos %>
-			</div>
-
 		</div>
 	</div>
 
