--- a/app/views/cruises/show.html.erb
+++ b/app/views/cruises/show.html.erb
@@ -1,7 +1,7 @@
 <% @page_header = @cruise.title -%>
 
 <div class="row">
-	
+
 	<aside class="col-sm-4">
 		<% if @cruise.pictures.any? -%>
 		<figure class="thumbnail">
@@ -13,7 +13,7 @@
 
 		<div class="panel panel-default">
 			<header class="panel-heading">
-				<h4 class="panel-title">Details</h4>
+				<h4 class="panel-title text-center">Cruise Details</h4>
 			</header>
 			<div class="panel-body">
 				<p>
